--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "serve": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node api/index.js",
+    "build":"npm install && npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
